# excel-util

./: README.md
arm_calibration/: CMakeLists.txt  output_bag.bag  package.xml
arm_calibration/src/: calib_3d_cbs.cpp
excel_bins/: CMakeLists.txt  package.xml  setup.py
excel_bins/action/: MoveBin.action
excel_bins/launch/: add_bin.launch  get_slots_full.launch  pick_bin.launch  tool_handling_sim.launch  update_bins.launch
excel_bins/meshes/: bin_large.stl  bin_small.stl  toolbox.stl
excel_bins/msg/: Bin.msg  Bins.msg
excel_bins/src/: add_bin.cpp  get_slots_full.cpp  isBinLocationEmpty.cpp  isBinLocationEmpty_client.cpp  move_bin.cpp  move_bin.h  move_bin_action_server.cpp  move_bin_constrained.cpp  move_bin_constrained.h  move_bin_node.cpp  pick_bin.cpp  tool_handling_sim.cpp  update_bins.cpp
excel_bins/srv/: BinLocationEmpty.srv  UpdateBins.srv
excel_bins/test/: test_move_bin_as.py
excel_bringup/: .setup_assistant  CMakeLists.txt  package.xml
excel_bringup/config/: controllers.yaml  excel.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml
excel_bringup/launch/: default_warehouse_db.launch  demo.launch  excel_moveit_controller_manager.launch.xml  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
excel_calibration/: CMakeLists.txt  package.xml
excel_calibration/calib_data/: kinx2_ovrhdx2_calib_job1.yaml  kinx2_ovrhdx2_calib_job2.yaml  kinx2_ovrhdx2_calib_job3.yaml  kinx2_ovrhdx2_calib_job4.yaml  kinx2_ovrhdx2_calib_job5.yaml  kinx2_ovrhdx2_calib_job6.yaml  kinx2_ovrhdx2_calib_setup.yaml
excel_calibration/calib_launch/: kinect_back_calib.launch  kinect_front_calib.launch  overhead_hum_ws_calib.launch  overhead_rob_ws_calib.launch
excel_calibration/joint_pose_data/: kinect_back_poses.yaml  kinect_front_poses.yaml  overhead_hum_poses.yaml  overhead_rob_poses.yaml
excel_calibration/launch/: auto_calib.launch  calib_server.launch  calibration_service.launch  circlegrid7x5_large_tf.launch  kinect_back_calibration_tf.launch  kinect_back_guess_tf.launch  kinect_front_calibration_tf.launch  kinect_front_guess_tf.launch  kinect_temp_calib.launch  (+4 more)
excel_cameras/: CMakeLists.txt  package.xml
excel_controllers/: CMakeLists.txt  package.xml  ros_control_plugins.xml
excel_description/: CMakeLists.txt  package.xml
excel_hw_iface/: CMakeLists.txt  package.xml  setup.py
excel_hw_iface/config/: joint_limits.yaml  joint_names.yaml  trajectory_ctrl_constraints.yaml
excel_hw_iface/launch/: joint_gains.yaml  load_excel_ctrl.launch  run_excel_ctrl.launch  trajectory_ctrl_constraints.yaml  vel_jogging_ctrl_params.yaml
excel_hw_iface/src/: excel_ctrl_man.cpp
excel_hw_iface/src/excel_hw_iface/: estop_monitor.py  excel_interface.py  torque_err_fix.py
excel_hw_iface/test/: test_trajectory_ctrl.py  test_trajectory_sub_ctrl.py
excel_move/: CMakeLists.txt  package.xml  setup.py
excel_move/action/: Scanning.action
excel_move/cmake/: FindDMTX.cmake
excel_move/include/excel_move/: barcodeScan.hpp  scanning.h
excel_move/launch/: back_n_forth.launch  control_gripper.launch  demo.launch~  dodge_human.launch  move_joint.launch~  move_to_carthesian_position.launch  move_to_joint_positions.launch  move_to_known_position.launch  move_to_known_position.launch~  scanning.launch  scanning_action_server.launch  scanning_sim.launch
excel_move/nodes/: bin_follow.py
excel_move/src/: back_n_forth.cpp  back_n_forth.h  barcodeScan.hpp  close_gripper.cpp  dodge_human.cpp  dodge_human.h  joint_values.yaml  move_joint.cpp  move_to_carthesian_position.cpp  move_to_carthesian_position.cpp~  move_to_joint_positions.cpp  move_to_known_position.cpp  open_gripper.cpp  scan_table.cpp  scanning.cpp  scanning.h  scanning_action_server.cpp  scanning_node.cpp  scanning_sim.cpp  scanning_sim.h  scanning_template.h
excel_move/src/excel_move/: gripper_action_client.py  gripper_action_server.py
excel_move/test/: test_gripper_action_server.py  test_scanning_as.py
excel_moveit/: .setup_assistant  CMakeLists.txt  package.xml
excel_moveit/config/: excel.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml
excel_moveit/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  move_joint.launch  move_to_known_position.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
excel_moveit/msg/: Human.msg  Humans.msg
excel_moveit/src/: listener_humans.cpp  move_joint.cpp  move_to_known_position.cpp  publish_humans.cpp
excel_moveit_camera_test/: .setup_assistant  CMakeLists.txt  package.xml
excel_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
excel_moveit_description/: CMakeLists.txt  package.xml
excel_servers/: CMakeLists.txt  package.xml
extrinsic_calibration/: CMakeLists.txt  package.xml
indradrive_dashboard/: CMakeLists.txt  package.xml  setup.py
indradrive_hw_iface/: CMakeLists.txt  package.xml  setup.py
indradrive_hw_iface/include/indradrive_hw_iface/: cs_robot_hw.h  ethercat_ctrl.h  idcs_robot_hw.h  vel_ec_ctrl.h
indradrive_hw_iface/launch/: load_cs_ctrl.launch  run_cs_ctrl.launch  run_vel_cs_ctrl.launch  trajectory_ctrl_constraints.yaml
indradrive_hw_iface/src/: cs_ctrl_man.cpp  cs_robot_hw.cpp  ethercat_ctrl.cpp  idcs_robot_hw.cpp  test_rt_prio.cpp  vel_cat_main.cpp  vel_ctrl_man.cpp  vel_ec_ctrl.cpp
indradrive_hw_iface/src/indradrive_hw_iface/: drive_status_ctrl.py
indradrive_hw_iface/test/: test_trajectory_ctrl.py
indradrive_hw_iface/urdf/: cs_rail.urdf
robot_pc_filter/: CMakeLists.txt  package.xml
trajectory_gen/: CMakeLists.txt  package.xml  setup.py
(+148 files in other folders)
